fixing overflow bug

--- a/gmgc/static/metronic_src/assets/demo/default/base/style.bundle.css
+++ b/gmgc/static/metronic_src/assets/demo/default/base/style.bundle.css
@@ -1360,6 +1360,7 @@ pre {
     padding: 0.75rem;
     vertical-align: top;
     border-top: 1px solid #f4f5f8;
+    word-wrap: break-word;
    }
   .table thead th {
     vertical-align: bottom;
